@@ -5,10 +5,11 @@ module Natour
   class Config
     def self.load_file(filename, default: {}, dirs: [Dir.home, Dir.pwd])
       dirs.map do |dir|
-        YAML.safe_load(
+        config = YAML.safe_load(
           File.read(Pathname(dir).join(filename)),
           permitted_classes: [Symbol]
         )
+        config || {}
       rescue Errno::ENOENT
         {}
       end.reduce(default, &:merge)
